[gd_scene load_steps=7 format=3 uid="uid://piasimovkien"]

[ext_resource type="Script" path="res://Scenes/Common/Player/player.gd" id="1_bglpu"]
[ext_resource type="Material" uid="uid://ch3vxfioopggm" path="res://Media/Textures/tiling_orange_texture.tres" id="2_3udw8"]
[ext_resource type="PackedScene" uid="uid://bcwcbk540fmst" path="res://Scenes/Common/Player/DeathScreen/death_screen.tscn" id="3_2oyu7"]
[ext_resource type="PackedScene" uid="uid://dstwa1qqcjgwa" path="res://Scenes/Common/Player/NextLevelTimer/NextLevelTimer.tscn" id="4_k61b0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a4nkc"]
radius = 0.6
height = 2.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_n1oqc"]
material = ExtResource("2_3udw8")

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_bglpu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_a4nkc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_n1oqc")
skeleton = NodePath("../CollisionShape3D")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0.866271, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0)

[node name="CollisionDetector" type="Area3D" parent="."]

[node name="CollisionRadius" type="CollisionShape3D" parent="CollisionDetector"]
shape = SubResource("CapsuleShape3D_a4nkc")

[node name="DeathScreen" parent="." instance=ExtResource("3_2oyu7")]
visible = false

[node name="NextLevelTimer" parent="." instance=ExtResource("4_k61b0")]
visible = false
